Turned off auto start by default

--- a/scene_gen/config.json
+++ b/scene_gen/config.json
@@ -1,12 +1,12 @@
 {
   "name": "Scene Generator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "slug": "scene_gen",
   "description": "Generate scene files based on current states",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "before",
   "url": "https://github.com/Apipa169/",
-  "boot": "auto",
+  "boot": "manual",
   "options": {
     "types": "light,switch",
     "scene_name": "name_of_scene",
